fix z-index for filters and goToContact from apartment

--- a/resources/assets/sass/pages/znajdzLokal.scss
+++ b/resources/assets/sass/pages/znajdzLokal.scss
@@ -218,7 +218,7 @@
 
         position: absolute;
         top: 0;
-        z-index: 10000;
+        z-index: 9;
         min-height: 100vh;
 
         @include breakpoint($md) {
